PAE-82 - Fixed issue with overflowing package name in IE.

--- a/src/Modules/Settings/Dnn.PersonaBar.Extensions/Extensions.Web/src/components/Body/AvailableExtensions/common/ExtensionDetailRow/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.Extensions/Extensions.Web/src/components/Body/AvailableExtensions/common/ExtensionDetailRow/style.less
@@ -7,8 +7,11 @@
         width: 100%;
     }
     .package-name {
+        display: inline-block;
+        word-break: keep-all;
+        white-space: normal;
+        max-width: 100%;
         word-wrap: break-word;
-        display: inline;
         vertical-align: top;
     }
     > .dnn-grid-cell {
