--- a/src/Modules/Settings/Dnn.PersonaBar.Extensions/Extensions.Web/src/components/Body/InstalledExtensions/common/ExtensionDetailRow/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.Extensions/Extensions.Web/src/components/Body/InstalledExtensions/common/ExtensionDetailRow/style.less
@@ -10,11 +10,14 @@
         width: 100%;
     }
     .package-name {
+        display: inline-block;
+        word-break: keep-all;
+        white-space: normal;
+        max-width: 100%;
         word-wrap: break-word;
-        display: inline;
         vertical-align: top;
     }
-    > .dnn-grid-cell{
+    > .dnn-grid-cell {
         padding: 0 15px;
     }
 }
